--- a/app/src/main/res/layout/activity_homr.xml
+++ b/app/src/main/res/layout/activity_homr.xml
@@ -6,15 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".HomrActivity">
 
+    <ImageView
+        android:id="@+id/iv_profile_w"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/woman2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="60dp"
+        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_result"
+        android:id="@+id/tv_id"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="입력받는 값"
+        android:text="아이디"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_profile_w"
+        android:layout_marginTop="50sp"
+        android:typeface="serif"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="이름 : 박혜란"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_id"
+        android:layout_marginTop="20sp"
+        android:typeface="serif"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_gander"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="성별 : 여"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        android:layout_marginTop="20sp"
+        android:typeface="serif"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_mbti"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="MBTI : INFP"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_gander"
+        android:layout_marginTop="20sp"
+        android:typeface="serif"/>
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="종료"
+        android:typeface="serif"
+        android:background="#020202"
+        android:textColor="@color/white"
+        android:id="@+id/btn_end"
+        app:layout_constraintStart_toStartOf="@id/tv_mbti"
+        app:layout_constraintEnd_toEndOf="@id/tv_mbti"
+        app:layout_constraintTop_toBottomOf="@id/tv_mbti"
+        android:layout_marginTop="50dp"
+        android:textSize="20sp"/>
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
