--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,15 +33,15 @@
         android:layout_height="wrap_content"
         android:text="비밀번호"
         android:id="@+id/tv_pw"
-        app:layout_constraintStart_toStartOf="@id/ev_id"
-        app:layout_constraintTop_toBottomOf="@id/ev_id"
+        app:layout_constraintStart_toStartOf="@id/et_id"
+        app:layout_constraintTop_toBottomOf="@id/et_id"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         android:typeface="serif"/>
 
 
     <EditText
-        android:id="@+id/ev_id"
+        android:id="@+id/et_id"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -53,7 +53,7 @@
 
 
     <EditText
-        android:id="@+id/ev_pw"
+        android:id="@+id/et_pw"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -70,9 +70,9 @@
         android:background="#020202"
         android:textColor="@color/white"
         android:id="@+id/btn_login"
-        app:layout_constraintStart_toStartOf="@id/ev_pw"
-        app:layout_constraintEnd_toEndOf="@id/ev_pw"
-        app:layout_constraintTop_toBottomOf="@id/ev_pw"
+        app:layout_constraintStart_toStartOf="@id/et_pw"
+        app:layout_constraintEnd_toEndOf="@id/et_pw"
+        app:layout_constraintTop_toBottomOf="@id/et_pw"
         android:layout_marginTop="40dp"
         android:textSize="20sp"/>
 
